feat: implement pagination and projection for freelancer search functionality