@@ -1,26 +1,18 @@
 package com.example.jobsyserver.service.impl.search;
 
-import com.example.jobsyserver.features.freelancer.dto.FreelancerProfileAboutDto;
-import com.example.jobsyserver.features.freelancer.dto.FreelancerProfileBasicDto;
-import com.example.jobsyserver.features.freelancer.dto.FreelancerProfileContactDto;
-import com.example.jobsyserver.features.freelancer.dto.FreelancerProfileDto;
-import com.example.jobsyserver.features.project.dto.ProjectDto;
-import com.example.jobsyserver.features.freelancer.mapper.FreelancerProfileMapper;
-import com.example.jobsyserver.features.project.mapper.ProjectMapper;
-import com.example.jobsyserver.features.freelancer.model.FreelancerProfile;
-import com.example.jobsyserver.features.project.model.Project;
+import com.example.jobsyserver.features.freelancer.projection.FreelancerListItem;
 import com.example.jobsyserver.features.freelancer.repository.FreelancerProfileRepository;
+import com.example.jobsyserver.features.project.projection.ProjectListItem;
 import com.example.jobsyserver.features.project.repository.ProjectRepository;
 import com.example.jobsyserver.features.search.service.impl.SearchServiceImpl;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentMatchers;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.jpa.domain.Specification;
+import org.springframework.data.domain.*;
 
+import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
 
@@ -28,128 +20,100 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-public class SearchServiceImplTest {
+class SearchServiceImplTest {
 
     @Mock
-    private FreelancerProfileRepository freelancerProfileRepository;
+    private FreelancerProfileRepository freelancerRepo;
 
     @Mock
-    private ProjectRepository projectRepository;
-
-    @Mock
-    private FreelancerProfileMapper freelancerProfileMapper;
-
-    @Mock
-    private ProjectMapper projectMapper;
+    private ProjectRepository projectRepo;
 
     @InjectMocks
     private SearchServiceImpl searchService;
 
-    private FreelancerProfile freelancerProfile;
-    private Project project;
-    private FreelancerProfileDto freelancerProfileDto;
-    private ProjectDto projectDto;
+    private List<Long> skillIds;
+    private String term;
+    private Pageable pageable;
 
     @BeforeEach
-    void setup() {
-        freelancerProfile = new FreelancerProfile();
-        freelancerProfile.setId(1L);
-        freelancerProfileDto = new FreelancerProfileDto();
-        freelancerProfileDto.setId(1L);
-        FreelancerProfileBasicDto basicDto = new FreelancerProfileBasicDto();
-        basicDto.setCountry("Russia");
-        basicDto.setCity("Moscow");
-        freelancerProfileDto.setBasic(basicDto);
-
-        FreelancerProfileContactDto contactDto = new FreelancerProfileContactDto();
-        contactDto.setContactLink("https://linkedin.com/in/username");
-        freelancerProfileDto.setContact(contactDto);
-
-        FreelancerProfileAboutDto aboutDto = new FreelancerProfileAboutDto();
-        aboutDto.setAboutMe("Experienced developer with 5 years of experience...");
-        freelancerProfileDto.setAbout(aboutDto);
-
-        project = new Project();
-        project.setId(1L);
-        project.setTitle("Project 1");
-        projectDto = new ProjectDto();
-        projectDto.setId(1L);
-        projectDto.setTitle("Project 1");
+    void setUp() {
+        skillIds = List.of(1L, 2L);
+        term = "test";
+        pageable = PageRequest.of(0, 10);
     }
 
     @Test
-    void searchFreelancers_ShouldReturnList_WhenMatchingFreelancersFound() {
-        List<Long> skillIds = List.of(1L, 2L);
-        String textTerm = "Java";
-        when(freelancerProfileRepository.findAll(
-                ArgumentMatchers.<Specification<FreelancerProfile>>any()
-        )).thenReturn(List.of(freelancerProfile));
-        when(freelancerProfileMapper.toDto(freelancerProfile))
-                .thenReturn(freelancerProfileDto);
-
-        List<FreelancerProfileDto> result = searchService.searchFreelancers(skillIds, textTerm);
-
+    void searchFreelancers_ShouldReturnPage_WhenMatchesFound() {
+        FreelancerListItem pli = mock(FreelancerListItem.class);
+        when(pli.getId()).thenReturn(1L);
+        when(pli.getFirstName()).thenReturn("Alice");
+        when(pli.getLastName()).thenReturn("Smith");
+        when(pli.getCountry()).thenReturn("USA");
+        when(pli.getCity()).thenReturn("NYC");
+        when(pli.getAvatarUrl()).thenReturn("https://avatar.url");
+        when(pli.getAverageRating()).thenReturn(4.5);
+        Page<FreelancerListItem> page = new PageImpl<>(List.of(pli), pageable, 1);
+        when(freelancerRepo.searchProjectedFreelancers(skillIds, term, pageable)).thenReturn(page);
+        Page<FreelancerListItem> result = searchService.searchFreelancers(skillIds, term, pageable);
         assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals("Russia", result.get(0).getBasic().getCountry());
-        assertEquals("Moscow", result.get(0).getBasic().getCity());
-        assertEquals("https://linkedin.com/in/username",
-                result.get(0).getContact().getContactLink());
-        assertEquals("Experienced developer with 5 years of experience...",
-                result.get(0).getAbout().getAboutMe());
-        verify(freelancerProfileRepository, times(1)).findAll(
-                ArgumentMatchers.<Specification<FreelancerProfile>>any()
-        );
+        assertEquals(1, result.getTotalElements());
+        FreelancerListItem first = result.getContent().get(0);
+        assertEquals(1L, first.getId());
+        assertEquals("Alice", first.getFirstName());
+        assertEquals("Smith", first.getLastName());
+        assertEquals("USA", first.getCountry());
+        assertEquals("NYC", first.getCity());
+        assertEquals("https://avatar.url", first.getAvatarUrl());
+        assertEquals(4.5, first.getAverageRating());
+        verify(freelancerRepo, times(1)).searchProjectedFreelancers(skillIds, term, pageable);
     }
 
-    @Test
-    void searchFreelancers_ShouldReturnEmptyList_WhenNoMatchingFreelancersFound() {
-        List<Long> skillIds = List.of(1L, 2L);
-        String textTerm = "NonExistentSkill";
-
-        when(freelancerProfileRepository.findAll(
-                ArgumentMatchers.<Specification<FreelancerProfile>>any()
-        )).thenReturn(Collections.emptyList());
-
-        List<FreelancerProfileDto> result = searchService.searchFreelancers(skillIds, textTerm);
-
-        assertTrue(result.isEmpty());
-        verify(freelancerProfileRepository, times(1)).findAll(
-                ArgumentMatchers.<Specification<FreelancerProfile>>any()
-        );
-    }
 
     @Test
-    void searchProjects_ShouldReturnList_WhenMatchingProjectsFound() {
-        List<Long> skillIds = List.of(1L, 2L);
-        String textTerm = "Project";
-
-        when(projectRepository.findAll(
-                ArgumentMatchers.<Specification<Project>>any()
-        )).thenReturn(List.of(project));
-        when(projectMapper.toDto(project)).thenReturn(projectDto);
-
-        List<ProjectDto> result = searchService.searchProjects(skillIds, textTerm);
-
+    void searchFreelancers_ShouldReturnEmptyPage_WhenNoMatches() {
+        Page<FreelancerListItem> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+        when(freelancerRepo.searchProjectedFreelancers(skillIds, term, pageable)).thenReturn(emptyPage);
+        Page<FreelancerListItem> result = searchService.searchFreelancers(skillIds, term, pageable);
         assertNotNull(result);
-        assertEquals(1, result.size());
-        assertEquals("Project 1", result.get(0).getTitle());
-        verify(projectRepository, times(1)).findAll(
-                ArgumentMatchers.<Specification<Project>>any()
-        );
+        assertTrue(result.getContent().isEmpty());
+        assertEquals(0, result.getTotalElements());
     }
 
     @Test
-    void searchProjects_ShouldReturnEmptyList_WhenNoMatchingProjectsFound() {
-        List<Long> skillIds = List.of(1L, 2L);
-        String textTerm = "NonExistentProject";
-        when(projectRepository.findAll(
-                ArgumentMatchers.<Specification<Project>>any()
-        )).thenReturn(Collections.emptyList());
-        List<ProjectDto> result = searchService.searchProjects(skillIds, textTerm);
-        assertTrue(result.isEmpty());
-        verify(projectRepository, times(1)).findAll(
-                ArgumentMatchers.<Specification<Project>>any()
-        );
+    void searchProjects_ShouldReturnPage_WhenMatchesFound() {
+        ProjectListItem pli = mock(ProjectListItem.class);
+        when(pli.getId()).thenReturn(100L);
+        when(pli.getTitle()).thenReturn("Project X");
+        when(pli.getFixedPrice()).thenReturn(BigDecimal.valueOf(500));
+        when(pli.getClientCompanyName()).thenReturn("Acme Corp");
+        when(pli.getClientCity()).thenReturn("LA");
+        when(pli.getClientCountry()).thenReturn("USA");
+        when(pli.getAssignedFreelancerFirstName()).thenReturn("John");
+        when(pli.getAssignedFreelancerLastName()).thenReturn("Doe");
+        Page<ProjectListItem> page = new PageImpl<>(List.of(pli), pageable, 1);
+        when(projectRepo.searchProjected(skillIds, term, pageable)).thenReturn(page);
+        Page<ProjectListItem> result = searchService.searchProjects(skillIds, term, pageable);
+        assertNotNull(result);
+        assertEquals(1, result.getTotalElements());
+        ProjectListItem first = result.getContent().get(0);
+        assertEquals(100L, first.getId());
+        assertEquals("Project X", first.getTitle());
+        assertEquals(BigDecimal.valueOf(500), first.getFixedPrice());
+        assertEquals("Acme Corp", first.getClientCompanyName());
+        assertEquals("LA", first.getClientCity());
+        assertEquals("USA", first.getClientCountry());
+        assertEquals("John", first.getAssignedFreelancerFirstName());
+        assertEquals("Doe", first.getAssignedFreelancerLastName());
+        verify(projectRepo, times(1)).searchProjected(skillIds, term, pageable);
+    }
+
+    @Test
+    void searchProjects_ShouldReturnEmptyPage_WhenNoMatches() {
+        Page<ProjectListItem> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
+        when(projectRepo.searchProjected(skillIds, term, pageable)).thenReturn(emptyPage);
+        Page<ProjectListItem> result = searchService.searchProjects(skillIds, term, pageable);
+        assertNotNull(result);
+        assertTrue(result.getContent().isEmpty());
+        assertEquals(0, result.getTotalElements());
     }
 }
